@@ -1,5 +1,10 @@
 plugins {
     id 'java'
+    id 'application'
+}
+
+application {
+    mainClass = 'info.quiquedev.Main'
 }
 
 group 'info.quiquedev'
@@ -15,6 +20,11 @@ dependencies {
 
 tasks.withType(JavaCompile).each {
     it.options.compilerArgs.add('--enable-preview')
+}
+
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
 }
 
 test {
